--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "fastify": "^5.1.0",
     "fastify-websocket": "^4.3.0",
     "leveldown": "^6.1.1",
-    "levelup": "^5.1.1"
+    "levelup": "^5.1.1",
+    "uuid": "^11.0.3"
   }
 }
